# eTasks

./: .replit  App_Settings.py  Entries.py  ImageButton.py  Login.py  README.md  Register.py  addgroupwin.py  addtaskwin.py  blank_entry.py  clear_tasks.py  create_task_table.py  date_entry.py  delete_all_db.py  drop_text.py  encryption.py  etasksMessageBox.py  get_current_date.py  get_db.py  get_topic.py  getweather.py  group_obj.py  home.py  http_download.py  imagebuttontry.py  info_entry.py  installer.py  instances.py  lint fixes to do  loadG.py  loadGT.py  loadT.py  loading_algorithms.txt  main.py  multiple windows.py  newwin.py  open_home.py  pri_entry.py  pyproject.toml  quickbarV2.py  (+13 more)
.github/workflows/: pylint.yml
pip_school-main/: installer.py
